# pytest-parametrized

./: .gitignore  .hgtags  .travis.yml  CHANGELOG.md  Makefile  README.md  README.rst  parametrized.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  release.yml
tests/: conftest.py  test_all.py
