[project]
name = "pytest-parametrized"
version = "1.7"
description = "Pytest decorator for parametrizing tests with default iterables."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{name = "Aric Coady", email = "aric.coady@gmail.com"}]
keywords = ["pytest", "parametrize", "parameterize", "fixture"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Testing",
]
dependencies = ["pytest"]

[project.urls]
Homepage = "https://github.com/coady/pytest-parametrized"
Changelog = "https://github.com/coady/pytest-parametrized/blob/main/CHANGELOG.md"
Issues = "https://github.com/coady/pytest-parametrized/issues"

[tool.coverage.run]
source = ["parametrized"]
branch = true

[dependency-groups]
dev = ["pytest-cov"]
