[metadata]
name = pytest-parametrized
version = attr: parametrized.__version__
author = Aric Coady
author_email = aric.coady@gmail.com
description = Pytest plugin for parametrizing tests with default iterables.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/coady/pytest-parametrized
license = Apache Software License
keywords = pytest, parametrize, parameterize, fixture
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing

[options]
py_modules = parametrized
install_requires = pytest
python_requires = >=3.7
tests_require = pytest-cov

[flake8]
max-line-length = 100

[coverage:run]
source = parametrized
branch = True
